--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -3,15 +3,21 @@ run-name: "Update Changelog on Releaser on ${{ github.event_name }} by @${{ gith
 
 on:
   workflow_dispatch: # ✅ Cho phép chạy thủ công
+  repository_dispatch: # ✅ Cho phép kích hoạt từ bên ngoài (ví dụ: từ một workflow khác)
   release:
-    types: [published]
+    # created : # ✅ Chỉ chạy khi release được tạo
+    # published: # ✅ Chỉ chạy khi release được phát hành
+    types: [created] # ✅ Chỉ chạy khi release được tạo
 
 # Remove all permissions by default
 permissions: write-all # ⚠️ Nếu không cần ghi tất cả, bạn nên dùng principle of least privilege
 
 env:
   SERVER: production
-  VERSION: "1.0.${{ github.run_number }}" # ✅ Default nếu không đọc từ file VERSION
+  BRANCH: ${{ github.ref_name }}
+  REPOSITORY: ${{ github.repository }}
+  # ✅ Default nếu không đọc từ file VERSION
+  VERSION: ${{ ((github.ref_type == 'branch' && github.ref_name == 'main') || (github.ref_type == 'tag')) && format('1.0.{0}', github.run_number) || format('1.0.{0}-dev', github.run_number) }}
   REPO_NAME: # ✅ Sẽ được gán động trong steps
 
 jobs:
